# installer_creator

./: .gitignore  LICENSE  README.md  build_config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
installer_creator/: __init__.py  build_exe.py  build_installer.py  changelog_generator.py  cli.py  config_editor.py  config_editor.ui  config_editor_ui.py  uuid_generator.py
tests/: run_tests.py  test_build_exe.py  test_build_installer.py
