[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "installer_creator"
version = "0.1.3"
description = "Python package for compiling projects with Nuitka and creating Windows installers with Wix Toolset"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "nuitka",
    "pyyaml"
]

[project.scripts]
installer-creator = "installer_creator.cli:main"
