[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "installer_creator"
version = "0.1.6"
description = "Python package for compiling projects with Nuitka and creating Windows installers with Wix Toolset"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "nuitka",
    "pyyaml"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
homepage = "https://github.com/steveway/installer_creator"
issues = "https://github.com/steveway/installer_creator/issues"

[project.scripts]
installer-creator = "installer_creator.cli:main"
